--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,13 +18,15 @@
 
 html, body{
 	overflow-x: hidden;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
   
 
   .footer{
 
-	background-color: grey;
+	background-color: black;
 
 	.social{
 	display: flex;
@@ -33,7 +35,7 @@ html, body{
 	 font-family: 'Galada';font-size: 22px;
 
 
-	 .fa { @include setting(30px); }
+	 .fa { @include setting(25px); }
 
 
 .fa {
